# alicepi

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Cross.toml  Dockerfile.aarch64  IMPLEMENTATION_PLAN_STREAMING_SPEECH_REC.md  README.md  architecture_draft.md  build.rs  docker-compose.yml  send-pi.sh
.github/workflows/: build-base.yml  build-orchestrator.yml  build-speech-rec.yml  build_voice_output.yml  ci.yml  voice-input.yml
docker/: Dockerfile.base
models/: .gitignore
rust/: AGENTS.md  Cargo.toml  README.md
rust/.cargo/: config.toml
rust/src/: cli.rs  main.rs  orchestrator.rs  protocol.rs
rust/src/engine/: cloud.rs  local.rs  mod.rs
rust/src/tasks/: gpio.rs  speech_rec.rs  voice_input.rs  voice_output.rs
src/: cli.rs  config.rs  main.rs  model_download.rs  orchestrator.rs  protocol.rs  watchdog.rs
src/buttons/: Dockerfile  README.md  pyproject.toml
src/buttons/src/: main.py
src/buttons/tests/: mock_transmitter.py
src/engine/: cloud.rs  local.rs  mod.rs  session.rs
src/network_voice_input/: Dockerfile  README.md  audio_sender.py  config.py  main.py  pyproject.toml  receiver.py  streamer.py  vad.py
src/orchestrator/: Dockerfile  pyproject.toml  requirements.txt
src/orchestrator/src/: audio_processor.py  config.py  llm.py  main.py  session.py  sr_client.py  state.py  vibevoice_client.py
src/orchestrator/src/engines/: base.py  cloud.py  local.py
src/orchestrator/tests/: integration_test.py  test_audio_processor.py
src/proto_defs/: README.md  pyproject.toml
src/proto_defs/scripts/: gen_proto.py
src/proto_defs/src/alicepi_proto/: __init__.py  vad.proto  vad.py  vad_pb2.py
src/speech_rec/: Dockerfile  main.py  pyproject.toml  test_client.py
src/speech_rec/src/: audio_stream.py  interfaces.py  main.py  transcriber.py
src/speech_rec/src/speech_rec/: audio_stream.py  main.py  transcriber.py
src/tasks/: gpio.rs  mod.rs  speech_rec.rs  voice_input.rs  voice_output.rs
src/tasks/speech_rec/: mod.rs  moonshine.rs  sherpa.rs  whisper.rs
src/voice_input/: Dockerfile  README.md  pyproject.toml
src/voice_input/src/: config.py  main.py  streamer.py  vad.py
src/voice_input/src/voice_input/: audio_capture.py  config.py  main.py  streamer.py  vad.py
src/voice_output/: Dockerfile  main.py  pyproject.toml  zmq_audio_sender.py
tasks/: buttons.md  onboarding.md  orchestrator.md  speech_rec.md  updater.md  voice_input.md  voice_output.md
