[project]
name = "alicepi-proto"
version = "0.1.0"
description = "Shared protobuf definitions for AlicePi services"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "protobuf>=6.33.0",
]

[build-system]
requires = ["hatchling", "grpcio-tools>=1.66.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alicepi_proto"]

[tool.hatch.build.hooks.custom]
path = "scripts/gen_proto.py"
